--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ config.cfg
 
 # training outputs ( keep best model)
 ./training_outputs/model-last/*
+
+#logs
+metrics.json
+./Utils/evaluate_model.py
