--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ config.cfg
 #logs
 metrics.json
 ./Utils/evaluate_model.py
+
+# Ignore all files in Data except train.spacy and dev.spacy
+Data/*
+!Data/train.spacy
+!Data/dev.spacy
+
+
+# Ignore all files in transformer 
+transformer/*
+training_outputs/*
